--- a/main/company.html
+++ b/main/company.html
@@ -3,11 +3,10 @@ include './include/header.html';
 ?>
 
 
-    <div class="visual">
-        slide
+    <div class="visual company">
+        company
     </div>
-    <div class="container section">
-        <aside class="aside"></aside>
+    <div class="container section company">
         <section class="contents"></section>
     </div>
 
