--- a/main2/index.html
+++ b/main2/index.html
@@ -202,11 +202,11 @@ include './include/header.html';
             <ul class="clearfix">
                 <li>
                     <img src="images/saipan.jpg" alt="">
-                    <p>사이판<span>(SAIPAN)<br></span>★★★★☆</p>
+                    <p>사이판<span>(Saipan)<br></span>★★★★☆</p>
                 </li>
                 <li>
                     <img src="images/hawaii.jpg" alt="">
-                    <p>하와이<span>(HAWAII)<br></span>★★★★☆</p>
+                    <p>하와이<span>(Hawaii)<br></span>★★★★☆</p>
                 </li>
                 <li>
                     <img src="images/weather.jpg" alt="">
